# churn_prediction

./: README.md  pyproject.toml
data/output/: alunos_risco_critico_alto.csv  ranking_churn_todos_alunos_ativos.csv  top_100_alunos_prioritarios.csv
data/raw/: educational_churn_dataset.csv  test.csv  train.csv
notebooks/: churn_prediction.ipynb  eda_churn_prediction.ipynb  modeling_churn_predicton.ipynb
scripts/: preprocessing.py
